syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
rpc GetDiscount (GetDiscountRequest) returns (couponModel);

rpc CreateDiscount (CreateDiscountRequest) returns (couponModel);
rpc UpdateDiscount (UpdateDiscountRequest) returns (couponModel);
rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);


}

  message GetDiscountRequest {
		string productName = 1;
  }

  message couponModel {
		int32 Id = 1;
		string productName = 2;
		string description = 3;
		int32 amount = 4;
  }

message CreateDiscountRequest {
	couponModel coupon = 1;
}

message UpdateDiscountRequest {
	couponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;

}

message DeleteDiscountResponse {
	bool SUccessful = 1;
}

